scrollbars fix

--- a/frontend/src/components/controlpanel/controlpanel.module.css
+++ b/frontend/src/components/controlpanel/controlpanel.module.css
@@ -56,6 +56,8 @@
 }
 .nameEditBox {
     background: transparent;
+    flex-grow: 1;
+    width: 3ch;
     border: none;
     font-weight: bold;
     color: #C9C9C9;
